--- a/index.html
+++ b/index.html
@@ -3,39 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page d'Accueil</title>
+    <title>Page d'Accueil Améliorée</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #74ebd5, #acb6e5);
-            text-align: center;
-            padding: 50px;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #6a11cb, #2575fc);
             color: white;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden;
         }
         .container {
             background: rgba(255, 255, 255, 0.2);
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
             max-width: 500px;
-            margin: auto;
+            text-align: center;
+            animation: fadeIn 1.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
+            font-size: 28px;
         }
-        p {
-            font-size: 1.2em;
-            line-height: 1.5;
+        .clock {
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+        .animated-text {
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 10px;
+            animation: colorChange 3s infinite alternate;
+        }
+        @keyframes colorChange {
+            0% { color: #ffcc00; }
+            100% { color: #ff6b6b; }
+        }
+        .btn {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            font-size: 18px;
+            background: #ff6b6b;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background 0.3s;
+        }
+        .btn:hover {
+            background: #e63946;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Bienvenue !</h1>
-        <p>Un petit exemple de page HTML avec un design élégant et minimaliste.</p>
+        <h1>Bienvenue sur ma page !</h1>
+        <p>Un site avec une horloge en temps réel et une animation de texte !</p>
+        
+        <div class="clock" id="clock"></div>
+
+        <p class="animated-text">Profitez de votre visite ! 😊</p>
+
+        <button class="btn" onclick="changeText()">Cliquez-moi !</button>
     </div>
+
+    <script>
+        function updateTime() {
+            const now = new Date();
+            const hours = String(now.getHours()).padStart(2, '0');
+            const minutes = String(now.getMinutes()).padStart(2, '0');
+            const seconds = String(now.getSeconds()).padStart(2, '0');
+            document.getElementById('clock').innerText = `Il est ${hours}:${seconds}`;
+        }
+
+        function changeText() {
+            const textElement = document.querySelector('.animated-text');
+            textOptions = ["Passez une belle journée ! ☀️", "Bienvenue ! 😊", "Profitez du moment ! 🌟"];
+            textElement.innerText = textElement.innerText === textOptions[0] ? textOptions[1] : textOptions[2];
+        }
+
+        setInterval(updateTime, 1000);
+        updateTime();
+    </script>
 
 </body>
 </html>
